I added a 3 logo and commented it in App.js

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "hellow": "file:",
     "newsapp": "file:"
   },
   "description": ""
